--- a/src/sass/register.scss
+++ b/src/sass/register.scss
@@ -32,10 +32,12 @@ body{background:#FAFAFA;}
             #register_box{
                 height: 300px;width: 400px;
                 padding:50px 20px 0 50px;
+                position:relative;
                 label{
                     display:inline-block;height: 52px;width: 380px;border:1px solid #e6e6e6;line-height:52px;padding-left:20px;font-size: 14px;color: #666;vertical-align:top;
                     input{height: 30px;width: 200px;/*border:1px solid #ccc;*/margin-left:20px;width: 280px;}
                 }
+                .output{position:absolute;left:402px;top:67px;}
                 span{display:inline-block;width: 127px;height: 52px;border-right:1px solid #e6e6e6;border-bottom:1px solid #e6e6e6;background:#ECECFB;}
                 .agree{
                     font-size: 14px;color: #666;margin:20px 0;
